[ng-anhhtuann] fix: correct search criteria loop and total count in services